--- a/frontend/src/css/coinlist.css
+++ b/frontend/src/css/coinlist.css
@@ -29,3 +29,19 @@
 .centerText {
     text-align: center;
 }
+
+.searchbar {
+    justify-content: end;
+    vertical-align: middle;
+    border-radius: 12px;
+    margin: 0 auto;
+}
+
+.searchbar input {
+    border: none !important;
+    background-color: white;
+}
+
+.searchbar div {
+    width: 20px;
+}
