--- a/frontend/src/css/watchlist.css
+++ b/frontend/src/css/watchlist.css
@@ -1,20 +1,3 @@
-.balanceTitle {
-    font-size: 24px;
-    font-weight: bolder;
-    color: white;
-    margin-top: 24px;
-    border-bottom: solid;
-    font-weight: lighter;
-}
-
-.totalBalance {
-    font-size: 36px;
-    font-weight: bolder;
-    color: white;
-    font-weight: lighter;
-    margin-bottom: 24px;
-}
-
 .watchlistTitle {
     font-size: 24px;
     font-weight: lighter;
@@ -53,10 +36,18 @@
     opacity: 0;
     position:absolute;
     left:25%;
-    top:25%;
+    top:50%;
+}
+
+.watchlistAnch {
+    padding: 24px;
 }
 
 .watchlistAnch:hover > .viewButton {
     transition: opacity .3s;
     opacity: 1;
+}
+
+.paddedName {
+    margin-left: 6px;
 }
