--- a/frontend/src/css/balance.css
+++ b/frontend/src/css/balance.css
@@ -13,3 +13,19 @@
     font-weight: lighter;
     margin-bottom: 24px;
 }
+
+.coinBalanceTitle {
+    font-size: 16px;
+    font-weight: bolder;
+    color: white;
+    margin-top: 16px;
+    border-bottom: solid 1px;
+    font-weight: lighter;
+}
+
+.coinTotalBalance {
+    font-size: 24px;
+    color: white;
+    font-weight: lighter;
+    margin-bottom: 24px;
+}
