Added prototype links to AboutUs, Markets and Wallet

--- a/frontend/src/css/desc.css
+++ b/frontend/src/css/desc.css
@@ -1,10 +1,10 @@
-.marketHeader {
+.descHeader {
     font-size: 36px;
     color: white;
     margin-top: 36px;
 }
 
-.coinGeckoBody {
+.descBody {
     margin-top: 12px;
     margin-bottom: 12px;
     color: white;
